# xasset

./: .env.example  .gitignore  debug_run.py  docker-compose.yml  idea.txt  pyproject.toml
docs/: SETUP.md  TODO.md
docs/cross-branch/: README.md  urban.md
jiajia/config/: loader.py  schemas.py
jiajia/db/: base.py  connection.py
jiajia/models/: asset.py  commerce.py  composition.py  sample.py
jiajia/repositories/: asset.py  commerce.py  sample.py
jiajia/schemas/: asset.py  commerce.py  composition.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_region_add_doors_windows.py
ref/: README.md  layout.py  layout_def.py  layout_group.py  layout_propose.py  layout_sample.py  layout_sample_advisor.py  layout_sample_analyze.py  layout_sample_construct.py  layout_sample_decoration.py  layout_sample_kernel.py  layout_sample_pave.py  layout_sample_replace.py  layout_service_log.py  requirements.txt
ref/Furniture/: furniture.py  furniture_analysis.py  furniture_data_cate.json  furniture_data_type.json  furniture_feature.py  furniture_group.py  furniture_group_comp.py  furniture_group_dict.json  furniture_group_fine.json  furniture_group_form.json  furniture_group_layout.py  furniture_group_replace.py  furniture_refer.py  furniture_refer_dict.json  furniture_refer_item.json  glm_interface.py  glm_model.py  glm_render.py  glm_shape.py  glm_split.py  materials.py
ref/House/: house.py  house_data.py  house_data_detail.py  house_draw.py  (+13 more)
tests/: conftest.py  test_asset.py  test_commerce.py  test_composition.py  test_config.py  test_connection.py  test_integration.py  test_pipeline_integration.py  test_sample.py  test_schemas.py
(+200 files in other folders)
