[project]
name = "xasset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lizuojun", email = "lizuojun01@corp.netease.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "matplotlib>=3.10.8",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.48",
]

[project.scripts]
xasset = "xasset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xasset"]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
